--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@glimmer/tracking": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.10.1",
+    "ember-auto-import": "^1.12.1",
     "ember-cli": "~3.25.0",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.23.1",
@@ -65,5 +65,9 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "@ember/render-modifiers": "^2.0.4",
+    "material-components-web": "^13.0.0"
   }
 }
